Refactor, deconnexion apropos, create table et populate

--- a/src/main/webapp/WEB-INF/templates/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/fragments.html
@@ -23,9 +23,9 @@
                 <li th:class="${currentPage == 'projets'} ? 'nav-item active' : 'nav-item'">
                     <a class="nav-link" href="projets">Projets</a>
                 </li>
-                <li th:class="${currentPage == 'apropos'} ? 'nav-item active' : 'nav-item'">
+                <!--<li th:class="${currentPage == 'apropos'} ? 'nav-item active' : 'nav-item'">
                     <a class="nav-link" href="apropos">À propos</a>
-                </li>
+                </li>-->
             </ul>
         </div>
     </div>
