--- a/src/main/webapp/WEB-INF/templates/ajouterArticle.html
+++ b/src/main/webapp/WEB-INF/templates/ajouterArticle.html
@@ -14,83 +14,78 @@
 </head>
 <body>
 <nav th:replace="~{fragments::menu('projets')}"></nav>
+
 <div class="container">
-
-    <!--<div class="row">
-        <div class="col-lg-9">
-            <form>
-                <div class="form-group">
-                    <label for="nomarticle">Nom du projet</label>
-                    <input type="text" class="form-control" id="nomarticle"
-                           placeholder="Veuillez choisir un nom de projet">
-                    <small class="form-text text-muted">Trouvez un nom représentatif et concis
-                    </small>
-                </div>
-                <div class="form-group">
-                    <label for="contenu">Fichier Markdown</label>
-                    <input type="file" accept=".md" class="form-control" id="contenu">
-                    <small class="form-text text-muted">
-                    </small>
-                </div>
-                <div class="form-group">
-                    <label for="tags">Tags associés</label>
-                    <input type="text" data-role="tagsinput" value="jQuery,Script,Net">
-                    <h2>Multi Select</h2>
-                    <select multiple data-role="tagsinput" id="tags">
-                        <option value="Amsterdam">Amsterdam</option>
-                        <option value="Washington">Washington</option>
-                        <option value="Sydney">Sydney</option>
-                        <option value="Beijing">Beijing</option>
-                        <option value="Cairo">Cairo</option>
-                    </select>
-
-                </div>
-                <button type="submit" class="btn btn-primary">Ajouter</button>
-            </form>
-        </div>-->
     <div class="row">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-9">
-                    <div class="card card-body bg-light add-stuff">
-                        <h2>Ajouter une catégorie</h2>
-                        <form method="post" action="ajouterArticle">
-                            <div class="form-group">
-                                <input type="text" name="nomcategorie" class="form-control" id="nomcategorie"
-                                       placeholder="Nom d'une nouvelle catégorie">
-                            </div>
-                            <button type="submit" class="btn btn-primary" name="action" value="Nouvelle Categorie">Ajouter catégorie</button>
-                        </form>
+        <div class="col-lg-9">
+            <div class="card card-body bg-light add-stuff">
+                <h2>Ajouter un projet</h2>
+                <form>
+                    <div class="form-group">
+                        <label for="nomarticle">Nom du projet</label>
+                        <input type="text" class="form-control" id="nomarticle"
+                               placeholder="Veuillez choisir un nom de projet">
+                        <small class="form-text text-muted">Trouvez un nom représentatif et concis
+                        </small>
                     </div>
-                    <div class="card card-body bg-light add-stuff">
-                        <h2>Ajouter un auteur</h2>
-                        <form method="post" action="ajouterArticle">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nomAuthor" name="nomAuthor"
-                                       placeholder="Nom">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="bioAuthor" name="bioAuthor"
-                                       placeholder="Citation">
-                            </div>
-                            <button type="submit" class="btn btn-primary" name="action" value="Nouvel Auteur">Ajouter auteur</button>
-                        </form>
-
+                    <div class="form-group">
+                        <label for="nomcategoriearticle">Catégorie</label>
+                        <input type="text" class="form-control" id="nomcategoriearticle"
+                               placeholder="Catégorie">
                     </div>
+                    <div class="form-group">
+                        <label for="nomauteur">Auteur</label>
+                        <input type="text" class="form-control" id="nomauteur"
+                               placeholder="Nom de l'auteur">
+                    </div>
+                    <div class="form-group">
+                        <label for="contenu">Fichier Markdown</label>
+                        <input type="file" accept=".md" class="form-control" id="contenu">
+                        <small class="form-text text-muted">
+                        </small>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Ajouter</button>
+                </form>
 
 
-                </div>
-                <div th:replace="~{fragments::widget}">
-                </div>
             </div>
+            <div class="card card-body bg-light add-stuff">
+                <h2>Ajouter une catégorie</h2>
+                <form method="post" action="ajouterArticle">
+                    <div class="form-group">
+                        <input type="text" name="nomcategorie" class="form-control" id="nomcategorie"
+                               placeholder="Nom d'une nouvelle catégorie">
+                    </div>
+                    <button type="submit" class="btn btn-primary" name="action" value="Nouvelle Categorie">
+                        Ajouter catégorie
+                    </button>
+                </form>
+            </div>
+            <div class="card card-body bg-light add-stuff">
+                <h2>Ajouter un auteur</h2>
+                <form method="post" action="ajouterArticle">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="nomAuthor" name="nomAuthor"
+                               placeholder="Nom">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="bioAuthor" name="bioAuthor"
+                               placeholder="Citation">
+                    </div>
+                    <button type="submit" class="btn btn-primary" name="action" value="Nouvel Auteur">Ajouter
+                        auteur
+                    </button>
+                </form>
+
+            </div>
+
+
         </div>
-
+        <div th:replace="~{fragments::widget}">
+        </div>
     </div>
-
-
-
 </div>
-</div>
+
+
 </body>
 </html>
