--- a/src/main/webapp/WEB-INF/templates/apropos.html
+++ b/src/main/webapp/WEB-INF/templates/apropos.html
@@ -20,8 +20,10 @@
 
     <div class="row">
         <div class="col-lg-9">
-        </div>
+            <figure><img src="images/by-nc-sa.jpg" width="15%"></figure>
+            <figure><img src="images/opensource.png" width="15%"></figure>
 
+        </div>
         <div th:replace="~{fragments::widget}">
         </div>
 
